| Summary: | ASTERISK-29518: sig_analog: FCG_CAMA fails to signal ANI spill when using MF signaling | ||
| Reporter: | Sarah Autumn (spacegirl) | Labels: | |
| Date Opened: | 2021-07-10 21:31:14 | Date Closed: | 2021-08-20 17:08:19 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_dahdi |
| Versions: | 11.25.3 12.8.2 13.38.2 14.7.8 15.7.4 16.19.0 17.9.3 18.5.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | N/A | Attachments: | |
| Description: | A failure occurs when using FGC_CAMA in conjunction with MF signaling and ANI. The main problem is that after the initial MF called-number spill, Asterisk never winks back to the originating side, so the calling number spill is not started. This appears to be a logic error in the switch-case block, where line 1931 and below can't be reached when p->sig is ANALOG_SIG_FGC_CAMAMF.
Several smaller issues will also be addressed by the patch I am submitting, and all revolve around how asterisk handles ANI in the context of FGC_CAMA / FGC_CAMAMF: - Delay before ANI wink was unnecessarily long, and should be made configurable in chan_dahdi.conf. - The number of ANI INFO digits should be user-configurable. Different implementations of ANI will send a different number of INFO digits as part of the ANI spill. If the number of digits we expect is different than the number sent, the ANI spill and the callerID will be mutilated. - The ANI digit timeout should be configurable. 10 seconds is unnecessarily long, particularly with switches that implement ANI-B. When ANI identification fails, these switches will send a KP+1 or KP+2, with no ST pulse to indicate a failure. With Asterisk's existing 10 second timeout, the caller has to wait a full 10 seconds for call handling to resume. Making this configurable leaves the choice up to the user. - ANI-D uses ST, STP, ST2P and ST3P to differentiate between call dispositions. Asterisk should accept and store any of the above start pulses, and make them available as a channel variable for use in the dialplan. - Finally, there are specific console messages in Feature Group B and Feature Group C that are vague regarding the exact nature of the failure. These messages should be made clearer so the user can better understand the error and how to fix it. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-07-10 21:31:19.387-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-08-20 17:08:19.949-0500 Change 16366 merged by Friendly Automation: sig_analog: Changes to improve electromechanical signalling compatibility [https://gerrit.asterisk.org/c/asterisk/+/16366|https://gerrit.asterisk.org/c/asterisk/+/16366] By: Friendly Automation (friendly-automation) 2021-08-20 17:10:21.830-0500 Change 16368 merged by Friendly Automation: sig_analog: Changes to improve electromechanical signalling compatibility [https://gerrit.asterisk.org/c/asterisk/+/16368|https://gerrit.asterisk.org/c/asterisk/+/16368] By: Friendly Automation (friendly-automation) 2021-08-20 22:48:34.663-0500 Change 16367 merged by Friendly Automation: sig_analog: Changes to improve electromechanical signalling compatibility [https://gerrit.asterisk.org/c/asterisk/+/16367|https://gerrit.asterisk.org/c/asterisk/+/16367] By: Friendly Automation (friendly-automation) 2021-08-23 10:53:49.758-0500 Change 16151 merged by Kevin Harwell: sig_analog: Changes to improve electromechanical signalling compatibility [https://gerrit.asterisk.org/c/asterisk/+/16151|https://gerrit.asterisk.org/c/asterisk/+/16151] | ||